# Whatsapp-Reminder-Bot

./: .gitignore  try.py
sender/: .env.local  README.md  main.py  pyproject.toml
sender/core/: classify.py  context.txt  handle_query.py
sender/types_llm/: llm.py
sender/utils/: query_llm.py  send_whatsapp.py
sender/utils/classify/: invalid.py
sender/utils/create/: create.py
sender/utils/helper_fns/: gemini.py
sender/utils/simple/: simple.py
worker/: call.py  celeryconfig.py  tasks.py
